--- a/lib/template/bower.json
+++ b/lib/template/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "Untitled Bang Project",
+  "name": "untitled bang project",
   "authors": [
-    "Awesome author"
+    "awesome author"
   ],
-  "description": "The world is your canvas!",
+  "description": "the world is your canvas!",
   "main": "",
   "dependencies": {
     "angular": "1.5.5",
