--- a/lib/template/bower.json
+++ b/lib/template/bower.json
@@ -6,10 +6,10 @@
   "description": "the world is your canvas!",
   "main": "",
   "dependencies": {
-    "angular": "1.5.5",
+    "angular": "^1.5.5",
     "angular-ui-router": "^0.2.18",
     "angular-sanitize": "^1.5.5",
-    "angular-material": "master"
+    "angular-material": "^1.1.0"
   },
   "license": "",
   "homepage": "",
